--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -443,7 +443,8 @@ a:hover
       color: #1d857a
       a
         color: #1d857a
-
+.sl-item-l__custom
+  text-align: left
 .sl-item__title a
   color: #00d346
   text-decoration: none
@@ -628,6 +629,13 @@ a:hover
   &__right
     flex: 0 0 324px
     width: 324
+  &__container-link
+    color: #5c98ca
+  &__link
+    color: #5c98ca
+.section-info-custom-r
+  width: 290
+  flex: 0 0 290px
 .corporate-sec--two
   padding: 40px 0
 
@@ -656,7 +664,7 @@ a:hover
 .corporate-sec--three
   .section-info__right
     width: 450px
-    flex: 0 0 128px
+    flex: 0 0 450px
 .section-info-title
   font-size: 16px
   text-transform: uppercase
@@ -664,6 +672,10 @@ a:hover
   font-weight: normal
   &--c1
     color: #a7a7a7
+  &--c2
+    color: #5c98ca
+  &--c3
+    color: #bb9d73
 
 .columns
   padding-bottom: 23px
@@ -678,6 +690,16 @@ a:hover
       margin-left: 0
   &__description
     padding-top: 15px
+  &__icon
+    height: 58px
+  &__title
+    color: #a7a7a7
+    font-size: 34px
+    padding: 10px 0 10px
+  &__title-c1
+    color: #dc5e39
+.columns-custom-col
+  width: 280px
 .columns--three
   padding-bottom: 0
 .corpo-partners
