--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -629,8 +629,8 @@ a:hover
     flex: 1
     // padding-right: 58px
   &__right
-    flex: 0 0 324px
-    width: 324
+    flex: 0 0 350px
+    width: 350
   &__container-link
     color: #5c98ca
   &__link
@@ -808,7 +808,8 @@ a:hover
     padding-top: 30px
     a
       color: #1774c1
-
+.interbank-row-text-custom
+  padding-top: 17px
 
 // media
 @import "media"
