--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -447,10 +447,11 @@ a:hover
   text-align: left
 .sl-item__title a
   color: #00d346
-  text-decoration: none
+  text-decoration: underline
   transition: $transition
   &:hover
     opacity: 0.6
+    text-decoration: none
 
 
 
