--- a/app/css/main.css
+++ b/app/css/main.css
@@ -54,7 +54,7 @@ p {
   margin-top: 0;
   margin-bottom: 10px; }
 
-.main-nav__list, .features__list, .tabs__caption, .regular__list {
+.main-nav__list, .features__list, .tabs__caption, .regular__list, .fin-feature {
   margin: 0;
   padding: 0;
   list-style: none; }
@@ -724,6 +724,28 @@ a:hover {
       -ms-flex: 0 0 128px;
           flex: 0 0 128px; }
 
+.section-info-three--custom .section-info__right {
+  -webkit-order: 1;
+      -ms-flex-order: 1;
+          order: 1;
+  width: 350px;
+  -webkit-flex: 0 0 350px;
+      -ms-flex: 0 0 350px;
+          flex: 0 0 350px; }
+
+.section-info-three--custom .section-info__right {
+  padding-top: 33px; }
+
+.corporate-middle--leasing .columns__row {
+  display: block;
+  padding-top: 20px; }
+
+.corporate-middle--leasing .columns__col {
+  float: left;
+  width: 222px; }
+  .corporate-middle--leasing .columns__col:first-child {
+    margin-right: 50px; }
+
 .corporate-sec--three .section-info__right {
   width: 450px;
   -webkit-flex: 0 0 450px;
@@ -846,12 +868,8 @@ a:hover {
   font-family: "OpenSansSemiBold", "Arial", sans-serif;
   font-size: 16px;
   text-transform: uppercase;
-  text-align: center; }
-  .charts-title a {
-    color: #ff1c1c;
-    transition: all 0.3s ease; }
-    .charts-title a:hover {
-      opacity: 0.6; }
+  text-align: center;
+  color: #ff1c1c; }
   .charts-title--bar {
     padding-top: 40px; }
   .charts-title--c2, .charts-title--c2 a {
@@ -880,3 +898,44 @@ a:hover {
 
 .interbank-row-text-custom {
   padding-top: 17px; }
+
+.finance-middle {
+  width: 520px;
+  float: left; }
+  .finance-middle .columns__row {
+    width: 520px;
+    margin-top: 17px; }
+  .finance-middle .columns__col:first-child {
+    width: 328px; }
+
+.section-info-dec1 {
+  text-align: right; }
+
+.finance-sec {
+  overflow: hidden; }
+
+.finance-right {
+  float: right;
+  width: 340px;
+  margin-top: -125px; }
+
+.fin-feature__r {
+  float: right;
+  padding-left: 33px; }
+
+.fin-feature__item {
+  overflow: hidden;
+  padding-bottom: 46px; }
+  .fin-feature__item:last-child {
+    padding-bottom: 0; }
+
+.fin-feature__l {
+  text-align: right;
+  padding-top: 12px; }
+
+.fin-feature__title {
+  font-family: "OpenSansBold", "Arial", sans-serif;
+  font-size: 13px; }
+
+.fin-feature__link {
+  color: #6da4b1; }
