--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -868,5 +868,18 @@ a:hover
 
 .fin-feature__link
   color: #6da4b1
+
+.finance__wrap-btn
+  text-align: center
+  margin-bottom: 20px
+  .btn-corpo
+    border: 1px solid #5c98ca
+    background: #5c98ca
+    &:hover
+      background: #fff
+      color: #5c98ca
+.charts__sec-top
+  margin-bottom: 20px
+
 // media
 @import "media"
