--- a/app/css/main.css
+++ b/app/css/main.css
@@ -939,3 +939,16 @@ a:hover {
 
 .fin-feature__link {
   color: #6da4b1; }
+
+.finance__wrap-btn {
+  text-align: center;
+  margin-bottom: 20px; }
+  .finance__wrap-btn .btn-corpo {
+    border: 1px solid #5c98ca;
+    background: #5c98ca; }
+    .finance__wrap-btn .btn-corpo:hover {
+      background: #fff;
+      color: #5c98ca; }
+
+.charts__sec-top {
+  margin-bottom: 20px; }
