--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -49,10 +49,10 @@ a:hover
 
 .header-page
   margin-bottom: 27px
-  background: url(../img/header__bg.jpg) top center no-repeat
+  background: url(../img/header__bg1.jpg) top center no-repeat
   &__dec
     padding-bottom: 35px
-    background: url(../img/header__bg--bottom.png) bottom center no-repeat
+    background: url(../img/header__bg--bottom1.png) bottom center no-repeat
   &__top
     position: fixed
     top: 0
