--- a/app/css/main.css
+++ b/app/css/main.css
@@ -69,10 +69,10 @@ a:hover {
 
 .header-page {
   margin-bottom: 27px;
-  background: url(../img/header__bg.jpg) top center no-repeat; }
+  background: url(../img/header__bg1.jpg) top center no-repeat; }
   .header-page__dec {
     padding-bottom: 35px;
-    background: url(../img/header__bg--bottom.png) bottom center no-repeat; }
+    background: url(../img/header__bg--bottom1.png) bottom center no-repeat; }
   .header-page__top {
     position: fixed;
     top: 0;
