--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -443,6 +443,9 @@ a:hover
       color: #1d857a
       a
         color: #1d857a
+  &__description
+    a
+      color: #00d346
 .sl-item-l__custom
   text-align: left
 .sl-item__title a
@@ -728,6 +731,8 @@ a:hover
     padding: 10px 0 10px
   &__title-c1
     color: #dc5e39
+.columns-col-custom
+  width: 180px
 .columns-custom-col
   width: 280px
 .columns--three
