--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -73,6 +73,7 @@ a:hover
     border-top: 1px solid rgba(255,255,255, 0.3)
     padding-top: 34px
   &__wrap-info
+    animation-duration: 3s
   &__title
     margin-top: 0
     text-align: center
@@ -125,6 +126,7 @@ a:hover
     line-height: 1
     font-family: $font-root-bold
     letter-spacing: -18px
+    animation-duration: 2s
 
 .btn
   display: inline-block
@@ -172,6 +174,7 @@ a:hover
   // &__wrap-title
   &__wrap-description
     padding-bottom: 32px
+    animation-delay: 0.5s
   &--bg
     .section-page__wrap-description
       padding-top: 25px
@@ -220,6 +223,12 @@ a:hover
     width: (100%/6);
     text-align: center
     cursor: pointer
+    transition: all .5s ease
+    opacity: 0;
+    transform: translateY(-25px)
+    &.on
+      transform: translateY(0)
+      opacity: 1
     // &:first-child
     //   text-align: left
     // &:last-child
