--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -24,6 +24,9 @@ figure
   display: table
   clear:both
 
+.main-page, .header-page, .section-page_content
+  overflow: hidden
+
 body
   min-width: 1030px
   font: $font-size-root $font-root
