--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -654,6 +654,8 @@ a:hover
 .section-info-custom-r
   width: 290
   flex: 0 0 290px
+.section-info-r--dec
+  text-align: right
 .corporate-sec--two
   padding: 40px 0
 
