--- a/app/sass/main.sass
+++ b/app/sass/main.sass
@@ -921,17 +921,18 @@ a:hover
 
 .legend
   margin: 0 auto
+  font-size: 11px
   &__list
     @extend %ulli
     margin-bottom: 36px
   &__item
     margin-bottom: 10px
   &--one
-    width: 421px
+    width: 390px
   &--two
-    width: 290px
+    width: 250px
   &--three
-    width: 145px
+    width: 272px
 .legend-col
   display: inline-block
   width: 16px
